middleware/kyverno/base/policies/other/spicedb.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: spicedb-add-nodeselector
  annotations:
    policies.kyverno.io/title: Add Karpenter nodeSelector
    policies.kyverno.io/category: Karpenter
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/minversion: 1.6.0
    policies.kyverno.io/description: >-
      Selecting the correct Node(s) provisioned by Karpenter is a way to specify
      the appropriate resource landing zone or node for a workload. This policy injects a
      nodeSelector map into the Pod based on the Namespace type where it is deployed.
spec:
  failurePolicy: Fail
  rules:
    - name: spicedb
      match:
        any:
          - resources:
              kinds:
                - Pod
              namespaces:
                - spicedb
                - "spicedb-internal"
              names:
                - "spicedb-spicedb*"
      mutate:
        patchStrategicMerge:
          spec:
            nodeSelector:
              spicedb: "true"
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: spicedb-add-tolerations
  annotations:
    policies.kyverno.io/title: Add Karpenter tolerations
    policies.kyverno.io/category: Karpenter
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/minversion: 1.6.0
    policies.kyverno.io/description: >-
      Setting tolerations is a way to match the pod to Node(s) provisioned by
      Karpenter with the correct taint/s. This policy injects a tolerations map
      into the Pod based on the Namespace type where it is deployed.
spec:
  failurePolicy: Fail
  rules:
    - name: spicedb
      match:
        any:
          - resources:
              kinds:
                - Pod
              namespaces:
                - spicedb
                - "spicedb-internal"
              names:
                - "spicedb-spicedb*"
      mutate:
        patchStrategicMerge:
          spec:
            tolerations:
              - key: "spicedb"
                value: "true"
                effect: NoSchedule
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: spicedb-add-antiaffinity
  annotations:
    policies.kyverno.io/title: Add pod anti-affinity
    policies.kyverno.io/category: Karpenter
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/minversion: 1.6.0
    policies.kyverno.io/description: >-
      Pod anti-affinity rules allow you to specify rules about how pods should
      be placed relative to other pods. This policy injects a pod anti-affinity
      map into the Pod based on the Namespace where it is deployed.
spec:
  failurePolicy: Fail
  rules:
    - name: spicedb
      match:
        any:
          - resources:
              kinds:
                - Pod
              namespaces:
                - spicedb
                - "spicedb-internal"
              names:
                - "spicedb-spicedb*"
      mutate:
        patchStrategicMerge:
          spec:
            affinity:
              podAntiAffinity:
                requiredDuringSchedulingIgnoredDuringExecution:
                  - labelSelector:
                      matchLabels:
                        app.kubernetes.io/instance: spicedb-spicedb
                        app.kubernetes.io/name: spicedb
                    topologyKey: kubernetes.io/hostname
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: spicedb-add-topology-spread-constraints
  annotations:
    policies.kyverno.io/title: Add topology spread constraints
    policies.kyverno.io/category: Karpenter
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/minversion: 1.6.0
    policies.kyverno.io/description: >-
      With Topology Spread Constraint, you can control how Pods are spread
      across your cluster among failure-domains. This policy is to spread
      topology across zones. This policy injects a topologySpreadConstraints
      map into the Pod based on the Namespace where it is deployed.
spec:
  failurePolicy: Fail
  rules:
    - name: spicedb
      match:
        any:
          - resources:
              kinds:
                - Pod
              namespaces:
                - spicedb
                - "spicedb-internal"
              names:
                - "spicedb-spicedb*"
      mutate:
        patchStrategicMerge:
          spec:
            topologySpreadConstraints:
              - labelSelector:
                  matchLabels:
                    app.kubernetes.io/instance: spicedb-spicedb
                    app.kubernetes.io/name: spicedb
                maxSkew: 1
                topologyKey: topology.kubernetes.io/zone
                whenUnsatisfiable: ScheduleAnyway
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: spicedb-disable-release-check
  annotations:
    policies.kyverno.io/category: Other
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/minversion: 1.4.3
    policies.kyverno.io/description: >-
      Override SpiceDB command to skip release checks
      which are affecting GitHub API limits
      (https://authzed.com/blog/automatic-release-notification/)
spec:
  failurePolicy: Fail
  rules:
    - name: spicedb-disable-release-check
      match:
        any:
          - resources:
              kinds:
                - Pod
              namespaces:
                - spicedb
                - "spicedb-internal"
              names:
                - "spicedb-spicedb*"
      mutate:
        patchStrategicMerge:
          spec:
            containers:
              - name: spicedb-spicedb
                command:
                  - spicedb
                  - serve
                  - --skip-release-check
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: spicedb-add-reloader-annotation
  annotations:
    policies.kyverno.io/category: Other
    policies.kyverno.io/subject: Deployment,Annotation
    policies.kyverno.io/minversion: 1.4.3
    policies.kyverno.io/description: >-
      Add reloader annotation on Deployment created by spicedb operator.
spec:
  failurePolicy: Fail
  rules:
    - name: add-reloader-annotation
      match:
        any:
          - resources:
              kinds:
                - Deployment
              namespaces:
                - spicedb
                - "spicedb-internal"
              names:
                - "spicedb-spicedb"
      mutate:
        patchStrategicMerge:
          metadata:
            annotations:
              secret.reloader.stakater.com/reload: "spicedb-tls,spicedb-client-tls"
