middleware/kyverno/base/policies/other/timescaledb.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: timescaledb-add-reloader-annotation
  annotations:
    policies.kyverno.io/category: Other
    policies.kyverno.io/subject: StatefulSet,Annotation
    policies.kyverno.io/minversion: 1.4.3
    policies.kyverno.io/description: >-
      Add reloader annotation on statefulset created by timescaledb helm.
spec:
  failurePolicy: Fail
  rules:
    - name: add-reloader-annotation
      match:
        any:
          - resources:
              kinds:
                - StatefulSet
              namespaces:
                - timescaledb-${cluster_region}
              names:
                - "timescaledb"
      mutate:
        patchStrategicMerge:
          metadata:
            annotations:
              secret.reloader.stakater.com/reload: "timescaledb-certificate,timescaledb-node-cert,timescaledb-superuser-cert"
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: timescaledb-add-security-context
  annotations:
    policies.kyverno.io/category: Other
    policies.kyverno.io/subject: StatefulSet
    policies.kyverno.io/minversion: 1.4.3
    policies.kyverno.io/description: "Update timescaledb StatefulSet security context to fix policies violations"
spec:
  failurePolicy: Fail
  rules:
    - name: add-security-context
      match:
        any:
          - resources:
              kinds:
                - StatefulSet
              namespaces:
                - timescaledb-${cluster_region}
              names:
                - "timescaledb"
      mutate:
        patchStrategicMerge:
          spec:
            template:
              spec:
                securityContext:
                  seccompProfile:
                    type: RuntimeDefault
                containers:
                  - name: timescaledb
                    securityContext:
                      capabilities:
                        drop:
                          - ALL
                        add: ["NET_BIND_SERVICE"]
                initContainers:
                  - name: tstune
                    securityContext:
                      capabilities:
                        drop:
                          - ALL
                        add: ["NET_BIND_SERVICE"]
